Project images are now aligned properly, fixed a width issue

--- a/src/css/HomePage.css
+++ b/src/css/HomePage.css
@@ -91,11 +91,11 @@ Link {
 }
 
 
-.contentBlock { 
+.contentBlockHome { 
     margin: 2em;
     background-color: white;
     width: 75%;
-    padding: 2em 2em 10em 2em;
+    padding: 2em 4em 2em 2em;
     border: .5em solid rgb(22, 22, 24);
     border-radius: 2em;
     color: rgb(22, 22, 24);
@@ -213,5 +213,6 @@ Link {
 .buttonA {
     text-decoration: none;
     margin: 1em 3em;
+    min-width: 14em;
 }
 
